Fix overflow on collapsable menu on several media

--- a/webroot/css/base.sass
+++ b/webroot/css/base.sass
@@ -6,7 +6,6 @@ body
   padding-left: 0px
   padding-right: 0px
 
-
 .logo
   text-indent: -9999px
   background: url("/img/logo.png") no-repeat
@@ -16,13 +15,14 @@ body
 #menuNav
   background-color: lightgray
   max-height: 60px
-  overflow: hidden
 
 .navbar-nav > li
   text-align: center
   font-size: 1.3em
   font-weight: 500
   padding: 20px 15px 15px 15px
+  & > a:hover
+    padding: 18px 15px 1px 15px
 
 .menu-items
   display: block
@@ -32,7 +32,7 @@ body
 #stk-corporate-vid
   width: 40%
   height: 400px
-
+  max-height: 400px
 
 .applicationsMaximized
   & header
@@ -47,3 +47,45 @@ body
     background-color: white
     padding-left: 15%
     padding-right: 15%
+
+// Landscape phones and down
+@media (max-width: 480px)
+  #navItems
+    background-color: white
+    & > ul > li
+      padding: 0px !important
+
+  .navbar-nav > li
+    text-align: center
+    font-size: 1.3em
+    font-weight: 500
+    padding: 20px 15px 15px 15px
+    & > a:hover
+      padding: 20px 15px 15px 15px
+
+  .navbar.navbar-header
+    margin-bottom: 0px
+
+// Landscape phone to portrait tablet
+@media (max-width: 767px)
+  #navItems
+    background-color: white
+    & > ul > li
+      padding: 0px !important
+
+  .navbar-nav > li
+    text-align: center
+    font-size: 1.3em
+    font-weight: 500
+    padding: 20px 15px 15px 15px
+    & > a:hover
+      padding: 20px 15px 15px 15px
+
+  .navbar.navbar-header
+    margin-bottom: 0px
+
+// Portrait tablet to landscape and desktop
+@media (min-width: 768px) and (max-width: 979px)
+
+// Desktop
+@media (min-width: 1200px)
